$Id: History,v 1.22 2001-05-30 14:32:18 vnivanch Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

29 may 01: V.Ivanchenko 
- clean up againist Linux ANSI strict compilation mode.
     
27 mar 01 mma (stand-V03-00-05)
- commented out the printing of subcutoff energies at initialization
     
05 mar 01 mma (stand-V03-00-04)
- new subdirectory: integral
  migration of all G4I.. processes from muons, standard, utils into integral
       
22 feb 01: mma (stand-V03-00-03)
- G4PhotoElectricEffect.  DoIt: removed protection against low energy gamma,
    after correction in SandiaTable (materials-V03-00-05)
- G4EplusAnnihilation. PostStepDoIt: check with fStopButAlive instead of
   energy == 0. 

05 feb 01: G.Cosmo (stand-V03-00-02)
- Migration to STL for G4DataVector and G4OrderedTable.
  Modified files: G4SynchrotronRadiation.hh, G4IeBremsstrahlung.cc,
                  G4eBremsstrahlung.cc.

23 jan 01: mma (stand-V03-00-01)
- corrections in e/hEnergyLoss.cc: AlongStepDoIt L.Urban 23-01-01
  PostStep information is not used any more in AlongStepDoIt
  when generating sub-cutoff delta rays. (bug found by Babar)
     
16 jan 01: mma (stand-V03-00-00)
- small corrections in e/hEnergyLoss.cc L.Urban 11-01-01